# storm

./: Cargo.toml  README.md  crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
storm/: Cargo.toml  all.html  attr.flat_set_index.html  attr.hash_flat_set_index.html  attr.indexing.html  attr.one_index.html  attr.register.html  attr.single_set.html  attr.tree_index.html  constant.EV_CREATED.html  constant.OBJ_INDEX.html  constant.OBJ_TABLE.html  derive.Ctx.html  derive.LocksAwait.html  derive.MssqlDelete.html  derive.MssqlLoad.html  derive.MssqlSave.html  derive.NoopDelete.html  derive.NoopLoad.html  derive.NoopSave.html  enum.ApplyOrder.html  enum.Changed.html  enum.Error.html  enum.FieldsOrStr.html  enum.LogState.html  fn.async_ref_block5.html  fn.change_depth.html  fn.register_apply_log.html  fn.register_on_commit_handler.html  index.html  macro.flat_set_adapt!.html  macro.flat_set_adapt.html  macro.hash_flat_set_adapt!.html  macro.hash_flat_set_adapt.html  macro.one_adapt!.html  macro.one_adapt.html  macro.single_set_adapt!.html  macro.single_set_adapt.html  macro.tree_index_adapt!.html  macro.tree_index_adapt.html  (+88 more)
storm/accessor/: struct.CtxExt.html  trait.Accessor.html  trait.EntityAccessor.html  trait.EntityRemove.html  trait.EntityUpsert.html  trait.EntityUpsertMut.html  trait.LogAccessor.html  type.CtxExtObj.html  type.CtxVar.html  type.Deps.html  type.LogVar.html  type.Logs.html  type.LogsVar.html  type.TblVar.html  type.Vars.html
storm/apply_log/: enum.ApplyOrder.html  trait.ApplyLog.html
storm/as_ref_async/: fn.async_ref_block5.html  trait.AsRefAsync.html
storm/as_ref_opt/: trait.AsRefOpt.html  trait.FromRefOpt.html
storm/async_try_from/: trait.AsyncTryFrom.html
storm/clearable/: trait.Clearable.html
storm/ctx/: fn.register_apply_log.html  struct.Ctx.html  struct.CtxLocks.html  struct.CtxTransaction.html  struct.TblTransaction.html  struct.TblTransactionIter.html
storm/ctx_type_info/: trait.CtxTypeInfo.html
storm/entity/: trait.Entity.html
storm/entity_fields/: enum.FieldsOrStr.html  trait.EntityFields.html
storm/entity_of/: trait.EntityOf.html
storm/entity_validate/: trait.EntityValidate.html
storm/error/: enum.Error.html
storm/events/: struct.AppliedEvent.html  struct.ChangedEvent.html  struct.ClearEvent.html  struct.CommitEvent.html  struct.GcEvent.html  struct.RemovedEvent.html  struct.RemovingEvent.html  struct.TouchedEvent.html  struct.UpsertedEvent.html  struct.UpsertingEvent.html
storm/examples/: basic.rs
storm/fields/: trait.Fields.html
storm/gc/: index.html  sidebar-items.js  struct.GcCtx.html  trait.Gc.html
storm/get/: trait.Get.html
storm/get_mut/: trait.GetMut.html
storm/hash_table/: struct.HashTable.html
storm/indexing/: index.html  sidebar-items.js  struct.IntSet.html  trait.AsyncAsIdxTrx.html  trait.RebuildIndex.html
storm/init/: trait.Init.html
storm/insert/: trait.Insert.html  trait.InsertIfChanged.html  trait.InsertMut.html  trait.InsertMutIfChanged.html
storm/instrumented_err/: struct.InstrumentedErr.html  trait.InstrumentErr.html
storm/is_defined/: trait.IsDefined.html
storm/iterator_ext/: trait.IteratorExt.html  trait.RefIntoIterator.html
storm/len/: trait.Len.html
storm/logs/: struct.Logs.html  trait.LogOf.html
storm/mem/: index.html  sidebar-items.js  trait.Commit.html  trait.Insert.html  trait.Remove.html
storm/on_change/: fn.change_depth.html  struct.OnChange.html  trait.ChangeHandler.html
storm/on_changed/: enum.Changed.html  struct.OnChanged.html  trait.ChangedHandler.html
storm/on_commit/: fn.register_on_commit_handler.html  trait.CommitHandler.html
storm/on_remove/: struct.OnRemove.html  trait.RemoveHandler.html  trait.RemovingHandler.html
storm/one_to_many/: struct.OneToMany.html  trait.OneToManyFromIter.html
storm/prelude/: attr.indexing.html  derive.Ctx.html  index.html  sidebar-items.js  struct.AsyncOnceCell.html  struct.Ctx.html  struct.HashTable.html  struct.OnceCell.html  struct.ProviderContainer.html  struct.QueueRwLock.html  struct.VecTable.html  trait.ApplyLog.html  trait.Entity.html  trait.Get.html  trait.Insert.html  trait.InsertMut.html  trait.Remove.html  trait.Tag.html  trait.Transaction.html
storm/provider/: fn.global_provider.html  fn.set_global_provider.html  index.html  sidebar-items.js  struct.LoadAllKeyOnly.html  struct.LoadArgs.html  struct.ProviderContainer.html  struct.TransactionProvider.html  trait.Delete.html  trait.LoadAll.html  trait.LoadOne.html  trait.Provider.html  trait.ProviderFactory.html  trait.Upsert.html  trait.UpsertMut.html
storm/registry/: fn.set_date_provider.html  index.html  sidebar-items.js
storm/remove/: trait.Remove.html
storm/src/: accessor.rs  apply_log.rs  as_mut_opt.rs  as_ref_async.rs  as_ref_opt.rs  asset.rs  ctx.rs  (+80 more)
storm_derive/: Cargo.toml  all.html  attr.flat_set_index.html  attr.hash_flat_set_index.html  attr.indexing.html  attr.one_index.html  attr.register.html  attr.single_set.html  attr.tree_index.html  derive.Ctx.html  derive.LocksAwait.html  derive.MssqlDelete.html  derive.MssqlLoad.html  derive.MssqlSave.html  derive.NoopDelete.html  derive.NoopLoad.html  derive.NoopSave.html  index.html  sidebar-items.js
storm_mssql/: Cargo.toml  all.html  enum.Error.html  fn.apply_field_diff_impl.html  fn.create_provider_container_from_env.html  fn.field_diff_impl.html  fn.from_field_diff_impl.html  fn.into_column_data_static.html  index.html  sidebar-items.js  struct.ExecuteArgs.html  struct.KeysFilter.html  struct.MssqlFactory.html  struct.MssqlProvider.html  struct.MssqlTransactionGuard.html  struct.Parameter.html  struct.TransactionScoped.html  struct.UpsertBuilder.html  trait.ApplyEntityDiff.html  trait.ApplyFieldDiff.html  trait.ClientFactory.html  trait.EntityDiff.html  trait.Execute.html  trait.FieldDiff.html  trait.FilterSql.html  trait.FromFieldDiff.html  trait.FromSql.html  trait.MssqlMeta.html  trait.QueryRows.html  trait.SaveEntityPart.html  trait.ToSql.html  trait.ToSqlNull.html  trait.ValueFieldDiff.html  type.Client.html  type.Result.html
storm_postgres/: Cargo.toml
(+782 files in other folders)
