[workspace]
resolver = "2"
members = [
    "storm",
    "storm_derive",
    "storm_mssql"
]

[workspace.dependencies]
cache = { git = "https://github.com/danylaporte/cache.git" }
chrono = { version = "0.4", features = ["serde"] }
dec19x5 = { git = "https://github.com/danylaporte/dec19x5.git", features = ["serde"] }
futures = "0.3"
metrics = { version = "0.22" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
str_utils = { git = "https://github.com/danylaporte/str_utils.git" }
tokio = { version = "1", default-features = false }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

#[patch.'https://github.com/danylaporte/dec19x5']
#dec19x5 = { path = "../dec19x5" }

#[patch.'https://github.com/danylaporte/str_utils']
#str_utils = { path = "../str_utils" }
