[workspace]
resolver = "2"
members = [
    "storm",
    "storm_derive",
    "storm_mssql"
]

[workspace.dependencies]
cache = { git = "https://github.com/danylaporte/cache.git" }
chrono = { version = "0.4.44", features = ["serde"] }
dec19x5 = { git = "https://github.com/danylaporte/dec19x5.git", features = ["serde"] }
extobj = { git = "https://github.com/danylaporte/extobj.git" }
fast-set = { git = "https://github.com/danylaporte/fast-set.git" }
futures = "0.3.32"
linkme = "0.3"
metrics = { version = "0.24.3" }
once_cell = { version = "1.21.4", features = ["parking_lot"] }
parking_lot = "0.12"
rayon = "1.12.0"
rustc-hash = "2.1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
str_utils = { git = "https://github.com/danylaporte/str_utils.git" }
tokio = { version = "1.52.0", default-features = false, features = ["parking_lot", "sync"] }
tokio-util = { version = "0.7.18", features = ["compat"] }
tracing = "0.1.44"
uuid = { version = "1.23.0", features = ["v4", "serde"] }
vec-map = { git = "https://github.com/danylaporte/vec-map.git", features = ["rayon"] }

#[patch.'https://github.com/danylaporte/dec19x5']
#dec19x5 = { path = "../dec19x5" }

#[patch.'https://github.com/danylaporte/fast-set']
#fast-set = { path = "../fast-set" }

#[patch.'https://github.com/danylaporte/str_utils']
#str_utils = { path = "../str_utils" }

#[patch.'https://github.com/danylaporte/extobj']
#extobj = { path = "../extobj/extobj" }

#[patch.'https://github.com/danylaporte/vec-map']
#vec-map = { path = "../vec-map" }
