[package]
name = "storm"
version = "0.44.0"
authors = ["Dany Laporte <dany_laporte@hotmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/danylaporte/storm"
publish = false

[dependencies]
async-cell-lock = { git = "https://github.com/danylaporte/async-cell-lock.git" }
cache = { workspace = true, optional = true }
chrono = { workspace = true, optional = true, features = ["serde"] }
dec19x5 = { workspace = true, optional = true }
extobj = { workspace = true }
fast-set = { workspace = true }
metrics = { workspace = true, optional = true }
linkme = "0.3"
once_cell = { workspace = true }
parking_lot = "0.12"
rayon = "1"
rustc-hash = "2.1"
serde = { workspace = true, features = ["derive"] }
storm_derive = { path = "../storm_derive", optional = true }
str_utils = { workspace = true, optional = true }
tiberius = { version = "0.12", default-features = false, optional = true }
tokio = { workspace = true, features = ["parking_lot", "sync"], default-features = false }
tracing = { workspace = true }
uuid = { workspace = true, optional = true, features = ["v4", "serde"] }
vec-map = { workspace = true }
version_tag = { git = "https://github.com/danylaporte/version_tag.git" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"], default-features = false }

[features]
default = ["cache", "chrono", "dec19x5", "derive", "uuid"]
derive = ["storm_derive"]
mssql = ["storm_derive/mssql", "tiberius"]
telemetry = ["metrics", "storm_derive/telemetry", "async-cell-lock/telemetry"]
