[package]
name = "storm_derive"
edition = "2021"
version = "0.23.3-alpha.0"
authors = ["Dany Laporte <dany_laporte@hotmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/danylaporte/storm"
publish = false

[lib]
proc-macro = true

[dependencies]
Inflector = "0.11"
darling = "0.14"
itertools = "0.10"
proc-macro2 = "1"
quote = "1"
syn = "1"

[dev-dependencies]

[features]
default = ["mssql"]
mssql = []
telemetry = []
