[package]
name = "storm_mssql"
version = "0.21.4-alpha.0"
authors = ["Dany Laporte <dany_laporte@hotmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/danylaporte/storm"
publish = false

[dependencies]
async-cell-lock = { git = "https://github.com/danylaporte/async-cell-lock.git" }
cache_crate = { package = "cache", git = "https://github.com/danylaporte/cache.git", optional = true }
chrono = { version = "0.4", features = ["serde"] }
dec19x5crate = { git = "https://github.com/danylaporte/dec19x5.git", features = ["serde", "tiberius"], optional = true, package = "dec19x5" }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
storm = { path = "../storm", features = ["mssql"] }
tiberius = { version = "0.9", features = ["chrono", "sql-browser-tokio"] }
tokio = { version = "1", default-features = false }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
uuid = { version = "0.8", features = ["v5", "serde"] }

[dev-dependencies]
static_init = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"], default-features = false }

[features]
cache = ["cache_crate", "storm/cache"]
dec19x5 = ["dec19x5crate"]
