[package]
name = "storm_mssql"
version = "0.38.4"
authors = ["Dany Laporte <dany_laporte@hotmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/danylaporte/storm"
publish = false

[dependencies]
cache = { workspace = true, optional = true }
chrono = { workspace = true, features = ["serde"] }
dec19x5 = { workspace = true, features = ["serde", "tiberius"], optional = true }
futures = { workspace = true }
metrics = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
storm = { path = "../storm", features = ["mssql"] }
str_utils = { workspace = true, optional = true }
tiberius = { version = "0.12", default-features = false, features = ["chrono", "sql-browser-tokio", "tds73", "winauth"] }
tokio = { workspace = true, default-features = false }
tokio-util = { workspace = true, features = ["compat"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]
async-cell-lock = { git = "https://github.com/danylaporte/async-cell-lock.git" }
static_init = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"], default-features = false }

[features]
telemetry = ["metrics"]
