[package]
name = "storm_postgres"
version = "0.1.0"
authors = ["Dany Laporte <dany_laporte@hotmail.com>"]
edition = "2018"
publish = false

[dependencies]
async-trait = "0.1"
native-tls = "0.2"
postgres-native-tls = "0.5"
storm = { path = ".." }
tokio = { version = "1", features = ["sync"] }
tokio-postgres = "0.7"
tracing = "0.1"
tracing-futures = "0.2"
