[package]
name = "storm_postgres"
version = "0.1.0"
authors = ["Dany Laporte <dany_laporte@hotmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/danylaporte/storm"
publish = false

[dependencies]
async-trait = "=0.1.42"
bytes = "1"
native-tls = "0.2"
postgres-native-tls = "0.5"
postgres-types = "0.2"
storm = { path = "../storm", features = ["postgres"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
tokio-postgres = "0.7"
tracing = "0.1"
tracing-futures = "0.2"

[features]
default = ["cache", "vec-map"]
cache = ["storm/cache"]
vec-map = ["storm/vec-map"]
